# Ice_Quantification

./: .gitignore  README.md  anonymize_turbine_number.py  check_labels.py  config.py  config.yaml  create_angle_folders.py  data_preparation.py  label_images.py  label_ordering.py  main.py  model.py  predict_image.py  pyproject.toml  trainer.py  utils.py
IDUN/: train.slurm  transfer_files.py
image_labels/: labeled_data.csv  order_labels.csv  order_labels.json
