[project]
name = "ice-quantification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ['ALL']
ignore = ['F401', 'F841', 'COM812', 'ISC001', 'D203', 'D213', 'D100', 'D101', 'D102', 'D103', 'D107']